2005/01/18 Morgan Christiansson <drftpd@mog.se>
* Fixed dynamic user data inconsitencies,
  slots should be converted now.
* When converting from 1.1.4 xstream userdb, the xstream libs included
  with 1.1.4 have slightly different serialized formats,
  recent xstream escapes _ in field names as __.
  You can use this code snippet to upgrade them so that they are readable
  by recent xstream versions.
  > for x in *.xml ; do sed -e 's/<_/<__/' \
    -e 's/<\/_/<\/__/' $x > $x- ; mv $x- $x ; done

2005/01/09 Jamal James <teflon114@gmail.com>
* Added getUserByIdent() to UserManager
* Added !approve irc plugin to net.drmods.plugins.irc
* Added !credits irc plugin to net.drmods.plugins.irc
* Moved !kick irc plugin to net.drmods.plugins.irc
* Added irc.chanprefix and irc.msgprefix to irc.conf
   msgprefix is for msg commands i.e. !invite & !ident
   chanprefix is for the public commands
   commands added to generictextoutput.conf do no use this trigger.
* Changed !help response to private msg only

2005/01/05 Morgan Christiansson <drftpd@mog.se>
* Fixed bug in KeyedMap that allowed duplicate keys to be added.

2005/01/04 Jamal James <teflon114@gmail.com>
* Added getCommandsHelp() to all irc plugins which will be msg'd to user on !help

2004/12/29 Morgan Christiansson <drftpd@mog.se>
* Fixed commandhandlers that were broken while refactoring.
  Thanks to M3ta for stacktrace.
* Added MAJORCHANGES.txt which will contain a summary of changes
  instead of a just a detailed changelog.

2004/12/23 Morgan Christiansson <drftpd@mog.se>
  Commiting stuff i did while on vacation.
* Added pattern path expressions from ant. makedir2 in perms.conf for now.
  Will replace the old glob-matching expressions.
* Changed zipscript.conf to only be loaded on startup & SITE RELOAD, moved formatting
  options to ListUtils.properties

2004/12/09 Teflon <teflon114@gmail.com>
* Created conf/zipscript.conf
* Moved CWD config from Dir.properties to zipscript.conf